remove axes output from notebooks

--- a/tutorials/geometry_02_geometry.ipynb
+++ b/tutorials/geometry_02_geometry.ipynb
@@ -185,7 +185,7 @@
    },
    "outputs": [],
    "source": [
-    "trace.plot(raster_width=Q_(2, \"cm\"))"
+    "trace.plot(raster_width=Q_(2, \"cm\"));"
    ]
   },
   {
@@ -211,7 +211,7 @@
    "source": [
     "lcs_rot = LocalCoordinateSystem(tf.rotation_matrix_y(Q_(45, \"degree\")))\n",
     "trace_rot = Trace([line_segment, arc_segment,line_segment], lcs_rot)\n",
-    "trace_rot.plot(raster_width=Q_(2, \"cm\"))"
+    "trace_rot.plot(raster_width=Q_(2, \"cm\"));"
    ]
   },
   {
@@ -261,7 +261,7 @@
     "shape_right = Shape().add_line_segments(Q_([[10, 8], [5, 8], [1, 2], [1, 0], [10, 0]], \"cm\"))\n",
     "shape_left = shape_right.reflect_across_line([0, 0], [0, 1])\n",
     "profile = Profile([shape_left, shape_right])\n",
-    "profile.plot(raster_width=Q_(1, \"cm\"))"
+    "profile.plot(raster_width=Q_(1, \"cm\"));"
    ]
   },
   {
@@ -286,8 +286,8 @@
    "source": [
     "geometry = Geometry(profile=profile, trace=trace)\n",
     "geometry.plot(profile_raster_width=Q_(1, \"cm\"),\n",
-    "              trace_raster_width=Q_(10, \"cm\"))\n",
-    "trace.plot(raster_width=Q_(1, \"cm\"), axes=plt.gca(), fmt=\"r-\")"
+    "              trace_raster_width=Q_(10, \"cm\"));\n",
+    "trace.plot(raster_width=Q_(1, \"cm\"), axes=plt.gca(), fmt=\"r-\");"
    ]
   },
   {
@@ -348,9 +348,9 @@
     "profile_3 = Profile([shape_left_3, shape_right_3])\n",
     "\n",
     "\n",
-    "profile.plot(raster_width=Q_(1, \"cm\"), label=\"Profile 1\")\n",
-    "profile_2.plot(raster_width=Q_(1, \"cm\"), label=\"Profile 2\", ax=plt.gca())\n",
-    "profile_3.plot(raster_width=Q_(1, \"cm\"), label=\"Profile 3\", ax=plt.gca())\n",
+    "profile.plot(raster_width=Q_(1, \"cm\"), label=\"Profile 1\");\n",
+    "profile_2.plot(raster_width=Q_(1, \"cm\"), label=\"Profile 2\", ax=plt.gca());\n",
+    "profile_3.plot(raster_width=Q_(1, \"cm\"), label=\"Profile 3\", ax=plt.gca());\n",
     "plt.gca().legend()\n",
     "\n",
     "\n",
@@ -384,7 +384,7 @@
     "\n",
     "geometry_vp = Geometry(profile=v_profile,trace=trace)\n",
     "geometry_vp.plot(profile_raster_width=Q_(1, \"cm\"),\n",
-    "                 trace_raster_width=Q_(8, \"cm\"))"
+    "                 trace_raster_width=Q_(8, \"cm\"));"
    ]
   },
   {
@@ -471,7 +471,7 @@
     "geometry_custom_interp = Geometry(v_profile_custom_interp, trace_custom_interp)\n",
     "\n",
     "geometry_custom_interp.plot(profile_raster_width=Q_(1, \"cm\"),\n",
-    "                            trace_raster_width=Q_(2, \"cm\"))"
+    "                            trace_raster_width=Q_(2, \"cm\"));"
    ]
   }
  ],
