--- a/tutorials/groove_types_01.ipynb
+++ b/tutorials/groove_types_01.ipynb
@@ -135,7 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "v_groove.plot()"
+    "v_groove.plot();"
    ]
   },
   {
@@ -175,7 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "v_profile.plot(title=\"V-Groove\", raster_width=0.5, grid=False, line_style=\"rx\")"
+    "v_profile.plot(title=\"V-Groove\", raster_width=0.5, grid=False, line_style=\"rx\");"
    ]
   },
   {
@@ -255,7 +255,7 @@
     "    groove_dict.pop(k, None)\n",
     "\n",
     "for k, v in groove_dict.items():\n",
-    "    v[0].plot(line_style=\"-\")"
+    "    v[0].plot(line_style=\"-\");"
    ]
   },
   {
