dont return axes objects

--- a/tutorials/welding_example_01_basics.ipynb
+++ b/tutorials/welding_example_01_basics.ipynb
@@ -120,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_ = groove.plot(raster_width=0.2)"
+    "groove.plot(raster_width=0.2)"
    ]
   },
   {
