Refactor coordinate system tutorial

--- a/tutorials/transformations_01_coordinate_systems.ipynb
+++ b/tutorials/transformations_01_coordinate_systems.ipynb
@@ -34,7 +34,11 @@
    "outputs": [],
    "source": [
     "# enable interactive plots on Jupyterlab with ipympl and jupyterlab-matplotlib installed\n",
-    "# %matplotlib widget"
+    "# %matplotlib widget\n",
+    "\n",
+    "# set to `True` to enable k3d as plotting library for supporting functions (needs k3d \n",
+    "# and the corresponding jupyterlab extensions to be installed)\n",
+    "use_k3d = False"
    ]
   },
   {
@@ -116,20 +120,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create 3d plot\n",
-    "fig_01 = plt.figure()\n",
-    "ax_01 = fig_01.gca(projection=\"3d\")\n",
-    "try:\n",
-    "    fig_01.canvas.layout.height = \"500px\"\n",
-    "    fig_01.canvas.layout.width = \"500px\"\n",
-    "except:\n",
-    "    fig_01.set_size_inches(10, 10)\n",
-    "\n",
-    "vs.plot_coordinate_system(lcs_ref, ax_01, color=\"r\", label=\"reference system\")\n",
-    "vs.plot_coordinate_system(lcs_01, ax_01, color=\"g\", label=\"system 1\")\n",
-    "vs.plot_coordinate_system(lcs_02, ax_01, color=\"b\", label=\"system 2\")\n",
-    "vs.set_axes_equal(ax_01)\n",
-    "plt.legend(loc=\"lower left\");"
+    "vs.plot_coordinate_systems([(lcs_ref, \"r\", \"reference_system\"), \n",
+    "                            (lcs_01, \"g\", \"system 1\"), \n",
+    "                            (lcs_02, \"b\", \"system 2\") ])"
    ]
   },
   {
@@ -172,20 +165,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create 3d plot\n",
-    "fig_02 = plt.figure()\n",
-    "ax_02 = fig_02.gca(projection=\"3d\")\n",
-    "try:\n",
-    "    fig_02.canvas.layout.height = \"500px\"\n",
-    "    fig_02.canvas.layout.width = \"500px\"\n",
-    "except:\n",
-    "    fig_02.set_size_inches(10, 10)\n",
-    "\n",
-    "vs.plot_coordinate_system(lcs_ref, ax_02, color=\"r\", label=\"reference system\")\n",
-    "vs.plot_coordinate_system(lcs_03, ax_02, color=\"g\", label=\"system 3\")\n",
-    "vs.plot_coordinate_system(lcs_04, ax_02, color=\"b\", label=\"system 4\")\n",
-    "vs.set_axes_equal(ax_02)\n",
-    "plt.legend(loc=\"lower left\");"
+    "vs.plot_coordinate_systems([(lcs_ref, \"r\", \"reference_system\"), \n",
+    "                            (lcs_03, \"g\", \"system 3\"), \n",
+    "                            (lcs_04, \"b\", \"system 4\") ])"
    ]
   },
   {
@@ -224,19 +206,9 @@
    "outputs": [],
    "source": [
     "# create 3d plot\n",
-    "fig_03 = plt.figure()\n",
-    "ax_03 = fig_03.gca(projection=\"3d\")\n",
-    "try:\n",
-    "    fig_03.canvas.layout.height = \"500px\"\n",
-    "    fig_03.canvas.layout.width = \"500px\"\n",
-    "except:\n",
-    "    fig_03.set_size_inches(10, 10)\n",
-    "\n",
-    "vs.plot_coordinate_system(lcs_ref, ax_03, color=\"r\", label=\"reference system\")\n",
-    "vs.plot_coordinate_system(lcs_05, ax_03, color=\"g\", label=\"system 5\")\n",
-    "vs.plot_coordinate_system(lcs_06, ax_03, color=\"b\", label=\"system 6\")\n",
-    "vs.set_axes_equal(ax_03)\n",
-    "plt.legend(loc=\"lower left\");"
+    "vs.plot_coordinate_systems([(lcs_ref, \"r\", \"reference_system\"), \n",
+    "                            (lcs_05, \"g\", \"system 5\"), \n",
+    "                            (lcs_06, \"b\", \"system 6\") ])"
    ]
   },
   {
@@ -559,42 +531,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# create subplots\n",
-    "fig_invert = plt.figure()\n",
-    "try:\n",
-    "    fig_invert.canvas.layout.height = \"500px\"\n",
-    "    fig_invert.canvas.layout.width = \"1000px\"\n",
-    "except:\n",
-    "    fig_invert.set_size_inches(20, 10)\n",
-    "gs_invert = fig_invert.add_gridspec(1, 2)\n",
-    "ax_invert_0 = fig_invert.add_subplot(gs_invert[0, 0], projection=\"3d\")\n",
-    "ax_invert_1 = fig_invert.add_subplot(gs_invert[0, 1], projection=\"3d\")\n",
+    "_, (ax_invert_0, ax_invert_1) = vs.new_3d_figure_and_axes(num_subplots=2, width=1000)\n",
     "\n",
-    "# first plot\n",
-    "vs.plot_coordinate_system(lcs_ref, ax_invert_0, color=\"r\", label=\"parent\")\n",
-    "vs.plot_coordinate_system(lcs_child_in_parent, ax_invert_0, color=\"g\", label=\"child\")\n",
-    "ax_invert_0.set_xlim([-3, 3])\n",
-    "ax_invert_0.set_ylim([-3, 3])\n",
-    "ax_invert_0.set_zlim([-3, 3])\n",
-    "ax_invert_0.set_title(\"child in parent\")\n",
-    "ax_invert_0.legend(loc=\"lower left\")\n",
-    "\n",
-    "\n",
-    "# second plot\n",
-    "vs.plot_coordinate_system(lcs_parent_in_child, ax_invert_1, color=\"r\", label=\"parent\")\n",
-    "vs.plot_coordinate_system(lcs_ref, ax_invert_1, color=\"g\", label=\"child\")\n",
-    "ax_invert_1.set_xlim([-3, 3])\n",
-    "ax_invert_1.set_ylim([-3, 3])\n",
-    "ax_invert_1.set_zlim([-3, 3])\n",
-    "ax_invert_1.set_title(\"parent in child\")\n",
-    "ax_invert_1.legend(loc=\"lower left\");"
+    "# left plot\n",
+    "vs.plot_coordinate_systems([(lcs_ref, \"r\", \"parent\"), (lcs_child_in_parent, \"g\", \"child\")],\n",
+    "                           axes=ax_invert_0,\n",
+    "                           limits=[-3, 3],\n",
+    "                           title=\"child in parent\")\n",
+    "                        \n",
+    "# right plot\n",
+    "vs.plot_coordinate_systems([(lcs_parent_in_child, \"r\", \"parent\"), (lcs_ref, \"g\", \"child\")],\n",
+    "                           axes=ax_invert_1,\n",
+    "                           limits=[-3, 3],\n",
+    "                           title=\"parent in child\")"
    ]
   },
   {
@@ -685,46 +637,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# plot coordinate systems\n",
-    "fig_time_dep = plt.figure()\n",
-    "try:\n",
-    "    fig_time_dep.canvas.layout.height = \"500px\"\n",
-    "    fig_time_dep.canvas.layout.width = \"1000px\"\n",
-    "except:\n",
-    "    fig_time_dep.set_size_inches(20, 10)\n",
-    "gs_time_dep = fig_time_dep.add_gridspec(1, 2)\n",
-    "ax_0_time_dep = fig_time_dep.add_subplot(gs_time_dep[0, 0], projection=\"3d\")\n",
-    "ax_1_time_dep = fig_time_dep.add_subplot(gs_time_dep[0, 1], projection=\"3d\")\n",
+    "_, axes_array = vs.new_3d_figure_and_axes(num_subplots=2, width=1000)\n",
     "\n",
-    "# first timestep\n",
-    "vs.plot_coordinate_system(lcs_ref, ax_0_time_dep, color=\"r\", label=\"reference\")\n",
-    "vs.plot_coordinate_system(lcs_mov_in_ref, ax_0_time_dep, color=\"g\", label=\"lcs_mov_in_ref\", time_idx=0)\n",
-    "vs.plot_coordinate_system(lcs_rot_in_ref, ax_0_time_dep, color=\"b\", label=\"lcs_rot_in_ref\", time_idx=0)\n",
-    "vs.plot_coordinate_system(lcs_movrot_in_ref, ax_0_time_dep, color=\"c\", label=\"lcs_movrot_in_ref\", time_idx=0)\n",
-    "ax_0_time_dep.set_xlim([-3, 3])\n",
-    "ax_0_time_dep.set_ylim([-3, 3])\n",
-    "ax_0_time_dep.set_zlim([-3, 3])\n",
-    "ax_0_time_dep.set_title(\"first timestep\")\n",
-    "ax_0_time_dep.legend(loc=\"lower left\")\n",
-    "\n",
-    "\n",
-    "# second timestep\n",
-    "vs.plot_coordinate_system(lcs_ref, ax_1_time_dep, color=\"r\", label=\"reference\")\n",
-    "vs.plot_coordinate_system(lcs_mov_in_ref, ax_1_time_dep, color=\"g\", label=\"lcs_mov_in_ref\", time_idx=1)\n",
-    "vs.plot_coordinate_system(lcs_rot_in_ref, ax_1_time_dep, color=\"b\", label=\"lcs_rot_in_ref\", time_idx=1)\n",
-    "vs.plot_coordinate_system(lcs_movrot_in_ref, ax_1_time_dep, color=\"c\", label=\"lcs_movrot_in_ref\", time_idx=1)\n",
-    "ax_1_time_dep.set_xlim([-3, 3])\n",
-    "ax_1_time_dep.set_ylim([-3, 3])\n",
-    "ax_1_time_dep.set_zlim([-3, 3])\n",
-    "ax_1_time_dep.set_title(\"second timestep\")\n",
-    "ax_1_time_dep.legend(loc=\"lower left\");"
+    "for i, ax in enumerate(axes_array):\n",
+    "    vs.plot_coordinate_systems([(lcs_ref, \"r\", \"reference\"),\n",
+    "                                (lcs_mov_in_ref, \"g\", \"lcs_mov_in_ref\"),\n",
+    "                                (lcs_rot_in_ref, \"b\", \"lcs_rot_in_ref\"),\n",
+    "                                (lcs_movrot_in_ref, \"c\", \"lcs_movrot_in_ref\")],\n",
+    "                               axes=ax,\n",
+    "                               limits=[-3, 3],\n",
+    "                               title=f\"timestep {i}\",\n",
+    "                               time_index=i)\n"
    ]
   },
   {
@@ -767,46 +694,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# plot coordinate systems\n",
-    "fig_interp = plt.figure()\n",
-    "try:\n",
-    "    fig_interp.canvas.layout.height = \"500px\"\n",
-    "    fig_interp.canvas.layout.width = \"1000px\"\n",
-    "except:\n",
-    "    fig_interp.set_size_inches(20, 10)\n",
-    "gs_interp = fig_interp.add_gridspec(1, 2)\n",
-    "ax_0_interp = fig_interp.add_subplot(gs_interp[0, 0], projection=\"3d\")\n",
-    "ax_1_interp = fig_interp.add_subplot(gs_interp[0, 1], projection=\"3d\")\n",
+    "_, (ax_0_interp, ax_1_interp) = vs.new_3d_figure_and_axes(num_subplots=2, width=1000)\n",
     "\n",
     "# original systems\n",
-    "vs.plot_coordinate_system(lcs_ref, ax_0_interp, color=\"r\", label=\"reference\")\n",
-    "vs.plot_coordinate_system(lcs_tdp_in_ref, ax_0_interp, color=\"g\", label=\"2010-02-01\", time_idx=0)\n",
-    "vs.plot_coordinate_system(lcs_tdp_in_ref, ax_0_interp, color=\"b\", label=\"2010-02-07\", time_idx=1)\n",
-    "ax_0_interp.set_xlim([-3, 3])\n",
-    "ax_0_interp.set_ylim([-3, 3])\n",
-    "ax_0_interp.set_zlim([-3, 3])\n",
-    "ax_0_interp.set_title(\"original system\")\n",
-    "ax_0_interp.legend(loc=\"lower left\")\n",
+    "vs.plot_coordinate_systems([(lcs_ref, \"r\", \"reference\"),\n",
+    "                            (lcs_tdp_in_ref, \"g\", \"2010-02-01\", 0),\n",
+    "                            (lcs_tdp_in_ref, \"b\", \"2010-02-07\", 1)],\n",
+    "                           axes=ax_0_interp,\n",
+    "                           limits=[-3, 3],\n",
+    "                           title=\"original system\")\n",
     "\n",
     "\n",
     "# interpolated systems\n",
-    "vs.plot_coordinate_system(lcs_ref, ax_1_interp, color=\"r\", label=\"reference\")\n",
-    "num_time = len(time_interp)\n",
     "colors = [[0, 1, 0], [0, 1, 0.5], [0, 1, 1], [0, 0.5, 1], [0, 0, 1], [0.5, 0, 1]]\n",
-    "for i in range(num_time):\n",
-    "    vs.plot_coordinate_system(lcs_interp_in_ref, ax_1_interp, color=colors[i], label=time_interp[i], time_idx=i)\n",
-    "ax_1_interp.set_xlim([-3, 3])\n",
-    "ax_1_interp.set_ylim([-3, 3])\n",
-    "ax_1_interp.set_zlim([-3, 3])\n",
-    "ax_1_interp.set_title(\"interpolated system\")\n",
-    "ax_1_interp.legend(loc=\"lower left\");"
+    "plot_data = [(lcs_interp_in_ref, colors[i], time_interp[i], i) for i in range(len(time_interp))]\n",
+    "plot_data = [(lcs_ref, \"r\", \"reference\"), *plot_data]\n",
+    "\n",
+    "vs.plot_coordinate_systems(plot_data,\n",
+    "                           axes=ax_1_interp,\n",
+    "                           limits=[-3, 3],\n",
+    "                           title=\"interpolated system\")"
    ]
   },
   {
@@ -873,44 +784,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# plot coordinate systems\n",
-    "fig_trans = plt.figure()\n",
-    "try:\n",
-    "    fig_trans.canvas.layout.height = \"500px\"\n",
-    "    fig_trans.canvas.layout.width = \"1000px\"\n",
-    "except:\n",
-    "    fig_trans.set_size_inches(20, 10)\n",
-    "gs_trans = fig_trans.add_gridspec(1, 2)\n",
-    "ax_0_trans = fig_trans.add_subplot(gs_trans[0, 0], projection=\"3d\")\n",
-    "ax_1_trans = fig_trans.add_subplot(gs_trans[0, 1], projection=\"3d\")\n",
+    "_, (ax_0_trans, ax_1_trans) = vs.new_3d_figure_and_axes(num_subplots=2, width=1000)\n",
     "\n",
     "# first plot\n",
-    "vs.plot_coordinate_system(lcs_ref, ax_0_trans, color=\"r\", label=\"original system\")\n",
-    "vs.plot_coordinate_system(lcs_target_in_ref, ax_0_trans, color=\"g\", label=\"target system\", time_idx=0)\n",
+    "vs.plot_coordinate_systems([(lcs_ref, \"r\", \"original system\"),\n",
+    "                            (lcs_target_in_ref, \"g\", \"target system\")],\n",
+    "                           axes=ax_0_trans,\n",
+    "                           limits=[-3, 3],\n",
+    "                           title=\"Data in original system\")\n",
     "ax_0_trans.plot(points_in_ref[0], points_in_ref[1], points_in_ref[2])\n",
-    "ax_0_trans.set_xlim([-3, 3])\n",
-    "ax_0_trans.set_ylim([-3, 3])\n",
-    "ax_0_trans.set_zlim([-3, 3])\n",
-    "ax_0_trans.set_title(\"Data in original system\")\n",
-    "ax_0_trans.legend(loc=\"lower left\")\n",
     "\n",
     "\n",
     "# second plot\n",
-    "vs.plot_coordinate_system(lcs_ref_in_target, ax_1_trans, color=\"r\", label=\"original system\")\n",
-    "vs.plot_coordinate_system(lcs_ref, ax_1_trans, color=\"g\", label=\"target system\", time_idx=0)\n",
-    "ax_1_trans.plot(points_in_target[0], points_in_target[1], points_in_target[2])\n",
-    "ax_1_trans.set_xlim([-3, 3])\n",
-    "ax_1_trans.set_ylim([-3, 3])\n",
-    "ax_1_trans.set_zlim([-3, 3])\n",
-    "ax_1_trans.set_title(\"Data in target system\")\n",
-    "ax_1_trans.legend(loc=\"lower left\");"
+    "vs.plot_coordinate_systems([(lcs_ref_in_target, \"r\", \"original system\"),\n",
+    "                            (lcs_ref, \"g\", \"target system\")],\n",
+    "                           axes=ax_1_trans,\n",
+    "                           limits=[-3, 3],\n",
+    "                           title=\"Data in original system\")\n",
+    "ax_1_trans.plot(points_in_target[0], points_in_target[1], points_in_target[2])"
    ]
   },
   {
@@ -956,31 +851,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# plot coordinate systems\n",
-    "fig_dsx = plt.figure()\n",
-    "try:\n",
-    "    fig_dsx.canvas.layout.height = \"500px\"\n",
-    "    fig_dsx.canvas.layout.width = \"500px\"\n",
-    "except:\n",
-    "    fig_dsx.set_size_inches(10, 10)\n",
-    "gs_dsx = fig_dsx.add_gridspec(1, 1)\n",
-    "ax_dsx = fig_dsx.add_subplot(gs_dsx[0, 0], projection=\"3d\")\n",
+    "_, ax_dsx = vs.new_3d_figure_and_axes()\n",
     "\n",
     "# first timestep\n",
-    "vs.plot_coordinate_system(lcs_ref, ax_dsx, color=\"r\", label=\"reference\")\n",
-    "vs.plot_coordinate_system(lcs_xr, ax_dsx, color=\"g\", label=str(lcs_xr.time[0]), time_idx=0)\n",
-    "vs.plot_coordinate_system(lcs_xr, ax_dsx, color=\"b\", label=str(lcs_xr.time[1]), time_idx=1)\n",
-    "ax_dsx.set_xlim([-3, 3])\n",
-    "ax_dsx.set_ylim([-3, 3])\n",
-    "ax_dsx.set_zlim([-3, 3])\n",
-    "ax_dsx.legend(loc=\"lower left\");"
+    "vs.plot_coordinate_systems([(lcs_ref, \"r\", \"reference\"),\n",
+    "                            (lcs_xr, \"g\", str(lcs_xr.time[0]), 0),\n",
+    "                            (lcs_xr, \"b\", str(lcs_xr.time[1]), 1)],\n",
+    "                           axes=ax_dsx,\n",
+    "                           limits=[-3, 3])"
    ]
   },
   {
