Update second transformations tutorial

--- a/tutorials/transformations_01_coordinate_systems.ipynb
+++ b/tutorials/transformations_01_coordinate_systems.ipynb
@@ -34,11 +34,7 @@
    "outputs": [],
    "source": [
     "# enable interactive plots on Jupyterlab with ipympl and jupyterlab-matplotlib installed\n",
-    "# %matplotlib widget\n",
-    "\n",
-    "# set to `True` to enable k3d as plotting library for supporting functions (needs k3d \n",
-    "# and the corresponding jupyterlab extensions to be installed)\n",
-    "use_k3d = False"
+    "# %matplotlib widget"
    ]
   },
   {
@@ -383,11 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "axes_lim = 3\n",
