--- a/tutorials/transformations_02_coordinate_system_manager.ipynb
+++ b/tutorials/transformations_02_coordinate_system_manager.ipynb
@@ -57,7 +57,7 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "This tutorial is about the `CoordinateSystemManager` class of the `weldx.transformations` package. It builds upon the tutorial about coordinate systems (tutorials/transformations_01_coordinate_systems.ipynb).\n",
+    "This tutorial is about the `CoordinateSystemManager` (CSM) class of the `weldx.transformations` package. It builds upon the tutorial about coordinate systems (tutorials/transformations_01_coordinate_systems.ipynb).\n",
     "\n",
     "The purpose of the `CoordinateSystemManager` is to define and manage the relationships of different coordinate systems and their associated data in a tree-like data structure. It provides methods to transform a `LocalCoordinateSystem` or its data to an arbitrary other coordinate system.\n",
     "\n",
@@ -112,7 +112,7 @@
    "source": [
     "## Visualizing the coordinate system managers structure\n",
     "\n",
-    "The internal structure of the `CoordinateSystemManager` is a tree. We can visualize it using the `plot` function:"
+    "The internal structure of the `CoordinateSystemManager` is a tree. We can visualize it using the `plot_graph` function:"
    ]
   },
   {
@@ -121,14 +121,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csm.plot()"
+    "csm.plot_graph()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Inside of ipython notebooks like this one, the `CoordinateSystemManager.__repr__` function is replaced by another one that calls the `plot` function. So it is sufficient to place the name of a `CoordinateSystemManager` instance at the end of a code cell to plot its graph:"
+    "Inside of ipython notebooks like this one, the `CoordinateSystemManager.__repr__` function is replaced by another one that calls the `plot_graph` function. So it is sufficient to place the name of a `CoordinateSystemManager` instance at the end of a code cell to plot its graph:"
    ]
   },
   {
@@ -155,11 +155,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "lcs_root_in_root = csm.get_cs(\"root\", \"root\")\n",
     "lcs_torch_in_root = csm.get_cs(\"torch\", \"root\")\n",
     "lcs_flange_in_root = csm.get_cs(\"flange\")\n",
     "lcs_specimen_in_root = csm.get_cs(\"specimen\")\n",
     "\n",
     "lcs_root_in_torch = csm.get_cs(\"root\", \"torch\")\n",
+    "lcs_torch_in_torch = csm.get_cs(\"torch\", \"torch\")\n",
     "lcs_flange_in_torch = csm.get_cs(\"flange\", \"torch\")\n",
     "lcs_specimen_in_torch = csm.get_cs(\"specimen\", \"torch\")"
    ]
@@ -177,44 +179,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lcs_root_in_root = tf.LocalCoordinateSystem()\n",
-    "lcs_torch_in_torch = tf.LocalCoordinateSystem()\n",
-    "\n",
-    "# plot coordinate systems\n",
-    "fig_01 = plt.figure()\n",
-    "fig_01.set_size_inches(16, 8)\n",
-    "gs_01 = fig_01.add_gridspec(1, 2)\n",
-    "ax_0_01 = fig_01.add_subplot(gs_01[0, 0], projection=\"3d\",proj_type = 'ortho')\n",
-    "ax_1_01 = fig_01.add_subplot(gs_01[0, 1], projection=\"3d\",proj_type = 'ortho')\n",
+    "_, (ax_0_01, ax_1_01) = vs.new_3d_figure_and_axes(num_subplots=2, width=800, height=400)\n",
     "\n",
     "# first plot\n",
-    "vs.plot_coordinate_system(lcs_root_in_root, ax_0_01, color=\"r\", label=\"root\")\n",
-    "vs.plot_coordinate_system(lcs_flange_in_root, ax_0_01, color=\"g\", label=\"flange\")\n",
-    "vs.plot_coordinate_system(lcs_specimen_in_root, ax_0_01, color=\"y\", label=\"specimen\")\n",
-    "vs.plot_coordinate_system(lcs_torch_in_root, ax_0_01, color=\"b\", label=\"torch\")\n",
-    "ax_0_01.set_xlim([-3, 3])\n",
-    "ax_0_01.set_ylim([-3, 3])\n",
-    "ax_0_01.set_zlim([-3, 3])\n",
-    "ax_0_01.set_title(\"root system\")\n",
-    "ax_0_01.legend(loc=\"lower left\")  #\n",
+    "vs.plot_coordinate_systems([(lcs_root_in_root, \"r\", \"parent\"), \n",
+    "                            (lcs_flange_in_root, \"g\", \"flange\"), \n",
+    "                            (lcs_specimen_in_root, \"y\", \"specimen\"), \n",
+    "                            (lcs_torch_in_root, \"b\", \"torch\")],\n",
+    "                           axes=ax_0_01,\n",
+    "                           limits=[-3, 3],\n",
+    "                           title=\"root system\")\n",
     "\n",
     "\n",
     "# second plot\n",
-    "vs.plot_coordinate_system(lcs_root_in_torch, ax_1_01, color=\"r\", label=\"root\")\n",
-    "vs.plot_coordinate_system(lcs_flange_in_torch, ax_1_01, color=\"g\", label=\"flange\")\n",
-    "vs.plot_coordinate_system(lcs_specimen_in_torch, ax_1_01, color=\"y\", label=\"specimen\")\n",
-    "vs.plot_coordinate_system(lcs_torch_in_torch, ax_1_01, color=\"b\", label=\"torch\")\n",
-    "ax_1_01.set_xlim([-3, 3])\n",
-    "ax_1_01.set_ylim([-3, 3])\n",
-    "ax_1_01.set_zlim([-3, 3])\n",
-    "ax_1_01.set_title(\"torch system\")\n",
-    "ax_1_01.legend(loc=\"lower left\")"
+    "vs.plot_coordinate_systems([(lcs_root_in_torch, \"r\", \"parent\"), \n",
+    "                            (lcs_flange_in_torch, \"g\", \"flange\"), \n",
+    "                            (lcs_specimen_in_torch, \"y\", \"specimen\"), \n",
+    "                            (lcs_torch_in_torch, \"b\", \"torch\")],\n",
+    "                           axes=ax_1_01,\n",
+    "                           limits=[-3, 3],\n",
+    "                           title=\"torch system\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Visualizing the coordinate systems of the CSM\n",
+    "\n",
+    "Note that we used a utility function of the `weldx.visualize` module in the previous section to plot all of the coordinate systems we extracted from the CSM to demonstrate that the transformations are calculated correctly. However, if you want to visualize all coordinate systems of the CSM in relation to a specific reference system, you can simply use its `plot` function:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csm.plot_coordinate_systems(backend=\"mpl\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The plot function offers many parameters to adjust the resulting plot. One of them is to select a render backend. The default backend is matplotlib but for jupyter notebooks you can also use \"k3d\" which provides interactive plots. To test it, you can set the `backend` property of the previous command to `\"k3d\"` and rerun the cell. However, all time related controls will be disabled since the CSM only contains static coordinate systems. Consult the API documentation for further information on the plot function.\n",
+    "\n",
+    "\n",
     "## Renaming existing coordinate systems\n",
     "Existing coordinate system nodes can be renamed using `CoordinateSystemManager.relabel`.\n",
     "\n",
@@ -445,68 +456,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lcs_root_in_root = tf.LocalCoordinateSystem()\n",
-    "lcs_torch_in_torch = tf.LocalCoordinateSystem()\n",
-    "\n",
     "# plot coordinate systems\n",
-    "fig_02 = plt.figure()\n",
-    "fig_02.set_size_inches(16, 8)\n",
-    "gs_02 = fig_02.add_gridspec(1, 2)\n",
-    "ax_0_02 = fig_02.add_subplot(gs_02[0, 0], projection=\"3d\",proj_type = 'ortho')\n",
-    "ax_1_02 = fig_02.add_subplot(gs_02[0, 1], projection=\"3d\",proj_type = 'ortho')\n",
+    "_, (ax_0_02, ax_1_02) = vs.new_3d_figure_and_axes(num_subplots=2, width=800, height=400)\n",
+    "\n",
+    "# helper function\n",
+    "def plot_data(axes, data, color, label):\n",
+    "    axes.plot(data[:, 0], data[:, 1], data[:, 2], \"x\", color=color, label=label)\n",
     "\n",
     "# first plot\n",
-    "vs.plot_coordinate_system(lcs_root_in_root, ax_0_02, color=\"r\", label=\"root\")\n",
-    "vs.plot_coordinate_system(lcs_flange_in_root, ax_0_02, color=\"g\", label=\"flange\")\n",
-    "vs.plot_coordinate_system(lcs_specimen_in_root, ax_0_02, color=\"y\", label=\"specimen\")\n",
-    "vs.plot_coordinate_system(lcs_torch_in_root, ax_0_02, color=\"b\", label=\"torch\")\n",
-    "ax_0_02.plot(\n",
-    "    specimen_geometry_in_root[:, 0],\n",
-    "    specimen_geometry_in_root[:, 1],\n",
-    "    specimen_geometry_in_root[:, 2],\n",
-    "    \"xc\",\n",
-    "    label=\"specimen geometry\",\n",
-    ")\n",
-    "ax_0_02.plot(\n",
-    "    sensor_positions_in_root[:, 0],\n",
-    "    sensor_positions_in_root[:, 1],\n",
-    "    sensor_positions_in_root[:, 2],\n",
-    "    \"xk\",\n",
-    "    label=\"sensor positions\",\n",
-    ")\n",
-    "\n",
-    "\n",
-    "ax_0_02.set_xlim([-3, 3])\n",
-    "ax_0_02.set_ylim([-3, 3])\n",
-    "ax_0_02.set_zlim([-3, 3])\n",
-    "ax_0_02.set_title(\"root system\")\n",
-    "ax_0_02.legend(loc=\"lower left\")  #\n",
-    "\n",
+    "plot_data(ax_0_02, specimen_geometry_in_root, \"c\", \"specimen geometry\")\n",
+    "plot_data(ax_0_02, sensor_positions_in_root, \"k\", \"sensor positions\")\n",
+    "csm.plot_coordinate_systems(title=\"root system\", limits=[-3,3], axes=ax_0_02)\n",
     "\n",
     "# second plot\n",
-    "vs.plot_coordinate_system(lcs_root_in_torch, ax_1_02, color=\"r\", label=\"root\")\n",
-    "vs.plot_coordinate_system(lcs_flange_in_torch, ax_1_02, color=\"g\", label=\"flange\")\n",
-    "vs.plot_coordinate_system(lcs_specimen_in_torch, ax_1_02, color=\"y\", label=\"specimen\")\n",
-    "vs.plot_coordinate_system(lcs_torch_in_torch, ax_1_02, color=\"b\", label=\"torch\")\n",
-    "ax_1_02.plot(\n",
-    "    specimen_geometry_in_torch[:, 0],\n",
-    "    specimen_geometry_in_torch[:, 1],\n",
-    "    specimen_geometry_in_torch[:, 2],\n",
-    "    \"xc\",\n",
-    "    label=\"specimen geometry\",\n",
-    ")\n",
-    "ax_1_02.plot(\n",
-    "    sensor_positions_in_torch[:, 0],\n",
-    "    sensor_positions_in_torch[:, 1],\n",
-    "    sensor_positions_in_torch[:, 2],\n",
-    "    \"xk\",\n",
-    "    label=\"sensor positions\",\n",
-    ")\n",
-    "ax_1_02.set_xlim([-3, 3])\n",
-    "ax_1_02.set_ylim([-3, 3])\n",
-    "ax_1_02.set_zlim([-3, 3])\n",
-    "ax_1_02.set_title(\"torch system\")\n",
-    "ax_1_02.legend(loc=\"lower left\")"
+    "plot_data(ax_1_02, specimen_geometry_in_torch, \"c\", \"specimen geometry\")\n",
+    "plot_data(ax_1_02, sensor_positions_in_torch, \"k\", \"sensor positions\")\n",
+    "csm.plot_coordinate_systems(reference_system=\"torch\", title=\"torch system\", limits=[-3,3], axes=ax_1_02)"
    ]
   },
   {
@@ -638,65 +603,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_time_dependent_coordinate_system(lcs, name, color, ax):\n",
-    "    coords = []\n",
-    "    for i in range(len(lcs.time)):\n",
-    "        label = None\n",
-    "        if i == 0:\n",
-    "            label = name\n",
-    "        vs.plot_coordinate_system(lcs, ax, color=color, label=label, time_idx=i)\n",
-    "        coords.append(lcs.coordinates[i].data)\n",
-    "\n",
-    "    line_params = \"--\" + color\n",
-    "    coords = np.array(coords)\n",
-    "    ax.plot(coords[:, 0], coords[:, 1], coords[:, 2], line_params)\n",
+    "_, (ax_0_tdp, ax_1_tdp, ax_2_tdp) = vs.new_3d_figure_and_axes(num_subplots=3, width=1000, height=400)\n",
     "\n",
     "\n",
-    "def plot_all_interpolated_coordinate_systems(\n",
-    "    lcs_parent, lcs_child, lcs_childchild, title, ax\n",
-    "):\n",
-    "    plot_time_dependent_coordinate_system(lcs_parent, \"parent\", \"g\", ax)\n",
-    "    plot_time_dependent_coordinate_system(lcs_child, \"child\", \"y\", ax)\n",
-    "    plot_time_dependent_coordinate_system(lcs_childchild, \"child child\", \"b\", ax)\n",
+    "vs.plot_coordinate_systems([(lcs_parent_in_root_default, \"g\", \"parent\"), \n",
+    "                            (lcs_child_in_root_default, \"y\", \"child\"), \n",
+    "                            (lcs_childchild_in_root_default, \"b\", \"child child\") ],\n",
+    "                           axes=ax_0_tdp,\n",
+    "                           title=\"default\",\n",
+    "                           limits=[-3, 3]\n",
+    "                          )\n",
     "\n",
-    "    ax.set_xlim([-3, 3])\n",
-    "    ax.set_ylim([-3, 3])\n",
-    "    ax.set_zlim([-3, 3])\n",
-    "    ax.set_title(title)\n",
-    "    ax.legend(loc=\"lower left\")\n",
+    "vs.plot_coordinate_systems([(lcs_parent_in_root_time, \"g\", \"parent\"), \n",
+    "                            (lcs_child_in_root_time, \"y\", \"child\"), \n",
+    "                            (lcs_childchild_in_root_time, \"b\", \"child child\") ],\n",
+    "                           axes=ax_1_tdp,\n",
+    "                           title=\"specific times\",\n",
+    "                           limits=[-3, 3]\n",
+    "                          )\n",
     "\n",
-    "\n",
-    "fig_tdp = plt.figure()\n",
-    "fig_tdp.set_size_inches(18, 6)\n",
-    "gs_tdp = fig_tdp.add_gridspec(1, 3)\n",
-    "ax_0_tdp = fig_tdp.add_subplot(gs_tdp[0, 0], projection=\"3d\",proj_type = 'ortho')\n",
-    "ax_1_tdp = fig_tdp.add_subplot(gs_tdp[0, 1], projection=\"3d\",proj_type = 'ortho')\n",
-    "ax_2_tdp = fig_tdp.add_subplot(gs_tdp[0, 2], projection=\"3d\",proj_type = 'ortho')\n",
-    "\n",
-    "\n",
-    "plot_all_interpolated_coordinate_systems(\n",
-    "    lcs_parent_in_root_default,\n",
-    "    lcs_child_in_root_default,\n",
-    "    lcs_childchild_in_root_default,\n",
-    "    \"default\",\n",
-    "    ax_0_tdp,\n",
-    ")\n",
-    "\n",
-    "plot_all_interpolated_coordinate_systems(\n",
-    "    lcs_parent_in_root_time,\n",
-    "    lcs_child_in_root_time,\n",
-    "    lcs_childchild_in_root_time,\n",
-    "    \"specific times\",\n",
-    "    ax_1_tdp,\n",
-    ")\n",
-    "\n",
-    "plot_all_interpolated_coordinate_systems(\n",
-    "    lcs_parent_in_root_ref,\n",
-    "    lcs_child_in_root_ref,\n",
-    "    lcs_childchild_in_root_ref,\n",
-    "    '\"parent\" as time reference',\n",
-    "    ax_2_tdp,\n",
-    ")"
+    "vs.plot_coordinate_systems([(lcs_parent_in_root_ref, \"g\", \"parent\"), \n",
+    "                            (lcs_child_in_root_ref, \"y\", \"child\"), \n",
+    "                            (lcs_childchild_in_root_ref, \"b\", \"child child\") ],\n",
+    "                           axes=ax_2_tdp,\n",
+    "                           title= '\"parent\" as time reference',\n",
+    "                           limits=[-3, 3]\n",
+    "                          )\n"
    ]
   },
   {
