--- a/scripts/welding_schema.ipynb
+++ b/scripts/welding_schema.ipynb
@@ -176,14 +176,14 @@
     "time = pd.timedelta_range(start=\"0s\", end=\"10s\", freq=\"1ms\")\n",
     "\n",
     "# current data\n",
-    "I_ts = ut._sine(f=Q_(10, \"1/s\"), amp=Q_(20, \"A\"), bias=Q_(300, \"A\"))\n",
+    "I_ts = ut.sine(f=Q_(10, \"1/s\"), amp=Q_(20, \"A\"), bias=Q_(300, \"A\"))\n",
     "I = I_ts.interp_time(time)\n",
     "I[\"time\"] = I[\"time\"]\n",
     "\n",
     "current_data = msm.Data(name=\"Welding current\", data=I)\n",
     "\n",
     "# voltage data\n",
-    "U_ts = ut._sine(f=Q_(10, \"1/s\"), amp=Q_(3, \"V\"), bias=Q_(40, \"V\"), phase=Q_(0.1, \"rad\"))\n",
+    "U_ts = ut.sine(f=Q_(10, \"1/s\"), amp=Q_(3, \"V\"), bias=Q_(40, \"V\"), phase=Q_(0.1, \"rad\"))\n",
     "U = U_ts.interp_time(time)\n",
     "U[\"time\"] = U[\"time\"]\n",
     "\n",
