notebook code formatting

--- a/scripts/welding_schema.ipynb
+++ b/scripts/welding_schema.ipynb
@@ -23,16 +23,16 @@
    "outputs": [],
    "source": [
     "# some python imports that will be used throughout the tutorial\n",
-    "import numpy as np\n",
-    "\n",
-    "import asdf\n",
     "import matplotlib.pyplot as plt\n",
     "import networkx as nx\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "import pint\n",
     "import sympy\n",
     "import xarray as xr\n",
-    "from mpl_toolkits.mplot3d import Axes3D"
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "\n",
+    "import asdf"
    ]
   },
   {
@@ -44,9 +44,9 @@
     "# importing the weldx package with prevalent default abbreviations\n",
     "import weldx\n",
     "import weldx.geometry as geo\n",
+    "import weldx.measurement as msm\n",
     "import weldx.transformations as tf\n",
     "import weldx.utility as ut\n",
-    "import weldx.measurement as msm\n",
     "import weldx.visualization as vis\n",
     "from weldx import Q_\n",
     "from weldx.transformations import LocalCoordinateSystem as lcs\n",
@@ -100,7 +100,7 @@
     "trace_segment = geo.LinearHorizontalTraceSegment(seam_length)\n",
     "trace = geo.Trace(trace_segment)\n",
     "\n",
-    "geometry = dict(groove_shape=groove,seam_length=seam_length)"
+    "geometry = dict(groove_shape=groove, seam_length=seam_length)"
    ]
   },
   {
@@ -368,7 +368,9 @@
    "outputs": [],
    "source": [
     "from weldx.asdf.tags.weldx.aws.process.gas_component import GasComponent\n",
-    "from weldx.asdf.tags.weldx.aws.process.shielding_gas_for_procedure import ShieldingGasForProcedure\n",
+    "from weldx.asdf.tags.weldx.aws.process.shielding_gas_for_procedure import (\n",
+    "    ShieldingGasForProcedure,\n",
+    ")\n",
     "from weldx.asdf.tags.weldx.aws.process.shielding_gas_type import ShieldingGasType"
    ]
   },
@@ -414,19 +416,24 @@
    "outputs": [],
    "source": [
     "tree = dict(\n",
-    "    reference_timestamp = reference_timestamp,\n",
+    "    reference_timestamp=reference_timestamp,\n",
     "    equipment=[HKS_sensor, BH_ELM],\n",
     "    measurements=[welding_current, welding_voltage],\n",
-    "    welding_current = current_calib_transform.output_signal,\n",
-    "    welding_voltage = voltage_calib_transform.output_signal,\n",
-    "    coordinate_systems = csm,\n",
-    "    geometry = geometry,\n",
-    "    process = process,\n",
-    "    meta = {\"welder\": \"A.W. Elder\"},\n",
-    "           )\n",
+    "    welding_current=current_calib_transform.output_signal,\n",
+    "    welding_voltage=voltage_calib_transform.output_signal,\n",
+    "    coordinate_systems=csm,\n",
+    "    geometry=geometry,\n",
+    "    process=process,\n",
+    "    meta={\"welder\": \"A.W. Elder\"},\n",
+    ")\n",
     "\n",
     "\n",
-    "buffer = weldx.asdf.utils._write_buffer(tree,asdffile_kwargs=dict(custom_schema=\"./weldx/asdf/schemas/weldx.bam.de/weldx/datamodels/single_pass_weld-1.0.0.schema.yaml\"))\n",
+    "buffer = weldx.asdf.utils._write_buffer(\n",
+    "    tree,\n",
+    "    asdffile_kwargs=dict(\n",
+    "        custom_schema=\"./weldx/asdf/schemas/weldx.bam.de/weldx/datamodels/single_pass_weld-1.0.0.schema.yaml\"\n",
+    "    ),\n",
+    ")\n",
     "weldx.asdf.utils.notebook_fileprinter(buffer)"
    ]
   },
