--- a/scripts/welding_schema.ipynb
+++ b/scripts/welding_schema.ipynb
@@ -448,9 +448,17 @@
     "with asdf.AsdfFile(\n",
     "    tree,\n",
     "    ignore_version_mismatch=False,\n",
+    "    custom_schema=\"./weldx/asdf/schemas/weldx.bam.de/weldx/datamodels/single_pass_weld-1.0.0.schema.yaml\",\n",
     ") as ff:\n",
     "    ff.write_to(filename)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
