--- a/scripts/test_geo_triangulate.ipynb
+++ b/scripts/test_geo_triangulate.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "polished-speaking",
+   "id": "official-relief",
    "metadata": {
     "nbsphinx": "hidden"
    },
@@ -16,7 +16,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "colonial-kazakhstan",
+   "id": "eleven-framing",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fifty-contributor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "binding-belief",
+   "id": "directed-velvet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "skilled-preview",
+   "id": "geological-following",
    "metadata": {},
    "source": [
     "### groove shape"
@@ -54,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dutch-source",
+   "id": "rough-tonight",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "advance-suspension",
+   "id": "regional-parks",
    "metadata": {},
    "source": [
     "### workpiece geometry"
@@ -80,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mineral-coral",
+   "id": "electoral-flight",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unusual-scratch",
+   "id": "favorite-effort",
    "metadata": {},
    "source": [
     "## Test rasterization"
@@ -113,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "chubby-experiment",
+   "id": "collaborative-shark",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,73 +138,109 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aware-rehabilitation",
+   "id": "respective-terry",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def triangulate_geometry(geo_data):\n",
-    "    nx = geo_data.shape[2]  # Points per profile\n",
-    "    ny = geo_data.shape[0]  # number of profiles\n",
-    "\n",
-    "    data = np.swapaxes(geo_data, 1, 2).reshape((-1, 3))\n",
-    "    triangle_indices = np.empty((ny - 1, nx - 1, 2, 3), dtype=int)\n",
-    "    r = np.arange(nx * ny).reshape(ny, nx)\n",
-    "    triangle_indices[:, :, 0, 0] = r[:-1, :-1]\n",
-    "    triangle_indices[:, :, 1, 0] = r[:-1, 1:]\n",
-    "    triangle_indices[:, :, 0, 1] = r[:-1, 1:]\n",
-    "\n",
-    "    triangle_indices[:, :, 1, 1] = r[1:, 1:]\n",
-    "    triangle_indices[:, :, :, 2] = r[1:, :-1, None]\n",
-    "    triangle_indices.shape = (-1, 3)\n",
-    "\n",
-    "    return data, triangle_indices"
+    "data, triangle_indices = ut._triangulate_geometry(geos[0])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "domestic-permission",
+   "id": "sticky-holly",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data, triangle_indices = triangulate_geometry(geos[0])\n",
-    "print(data.shape)\n",
-    "print(triangle_indices)"
+    "geo.PointCloud(*ut._triangulate_geometry(geos[0]))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "agreed-extraction",
+   "id": "systematic-material",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ptc_list = [geo.PointCloud.from_geometry_raster(g) for g in geos]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "present-galaxy",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data, triangle_indices = ut._triangulate_geometry(geos[0])\n",
+    "print(ptc_list[0].coordinates.shape)\n",
+    "print(ptc_list[0].triangles.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "circular-willow",
+   "metadata": {},
+   "source": [
+    "## k3d plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "moderate-finder",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import k3d\n",
+    "\n",
+    "plot = k3d.plot()\n",
+    "for ptc in ptc_list:\n",
+    "    plot += k3d.mesh(ptc.coordinates.flatten().astype(\"float32\"), ptc.triangles.flatten().astype(\"uint32\"))\n",
+    "plot.display()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "classical-sherman",
+   "metadata": {},
+   "source": [
+    "## ipygany plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "official-separation",
    "metadata": {},
    "outputs": [],
    "source": [
     "from ipygany import Component, IsoColor, PolyMesh, Scene, Threshold, Warp\n",
     "\n",
     "\n",
-    "def ipygany_meshes(geo_list):\n",
-    "    meshes = []\n",
-    "    for geo_data in geo_list:\n",
-    "        data, triangle_indices = triangulate_geometry(geo_data)\n",
-    "        meshes.append(\n",
-    "            PolyMesh(\n",
-    "                vertices=data,\n",
-    "                triangle_indices=triangle_indices,\n",
-    "            )\n",
-    "        )\n",
+    "def ipygany_meshes(ptc_list):\n",
+    "    meshes = [PolyMesh(vertices=ptc.coordinates,triangle_indices=ptc.triangles) for ptc in ptc_list]\n",
     "    return meshes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "varying-romance",
+   "id": "protected-nylon",
    "metadata": {},
    "outputs": [],
    "source": [
-    "meshes = ipygany_meshes(geos)\n",
+    "meshes = ipygany_meshes(ptc_list)\n",
     "Scene(meshes)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "religious-brush",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
